data/derived/sp14/progs/unify/prog2540.ml.out
Characters 11-22:
  eval (Sine (VarX,VarY), 1, 2);;
             ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
